# hey-bozo

./: .env  .gitignore  Cargo.toml
resources/: hey-bozo_en_windows_v2_2_0.ppn
src/: action_handler.rs  actions.rs  agent_speaker.rs  assistant.rs  discord.rs  listener.rs  main.rs  resampler.rs  sound_store.rs  speaker.rs
