[package]
name = "hey-bozo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
async-trait = "0.1.72"
bytes = "1.5.0"
dotenv = "0.15.0"
pv_cheetah = "1.1.0"
pv_cobra = "2.0.2"
pv_porcupine = "2.2.1"
ringbuf = "0.3.3"
rubato = "0.14.1"
serenity = "0.11.6"
simple-error = "0.3.0"
songbird = { path = "../songbird" }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
wav = "1.0.0"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
